# CSM

./: README.md  build.gradle  gradle.properties  local.properties  settings.gradle
app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/JKS/: padmanager.jks  westone_hemihua.jks
app/src/main/: AndroidManifest.xml
app/src/main/assets/: csm.cer
app/src/main/assets/cert/: ca1.cer  ca2.cer
app/src/main/java/com/westone/: SpaceManagerActivity.java
app/src/main/java/com/westone/csmmanager/: ChartView.java  FileSave.java  MainActivity.java  P11TestNative.java  PerReturnInfo.java  PerformanceActivity.java  ResultActivity.java  ReturnInfo.java  SDKUtils.java  TFStatus.java  TestCsmActivity.java  launcher.java
app/src/main/java/com/westone/skflist/: SKFFuncRun.java  SkfFunc.java  SkfListActivity.java  SkfPara.java
app/src/main/java/com/westone/testdemo/: AccessActivity.java  AlgActivity.java  AppManagerActivity.java  CJActivity.java  ChangJing.java  ContainerManagerActivity.java  DevManagerActivity.java  FileManagerActivity.java  GridViewFuncAdapter.java  GridViewTypeAdapter.java  HexByte.java  LogDebug.java  SKFDemoMACRO.java  TestCountActivity.java  ToastUtil.java  skfTestNative.java
app/src/main/jni/: Encrypt.cpp  Encrypt.h  P11TestFuncList.cpp  P11TestFuncList.h  bn.c  bn.h  com_westone_csmmanager_P11TestNative.h  cryptoki.h  curve.h  ecc.c  ecc.h  ecp.c  ecp.h  native.cpp  pkcs11_extendt.h  pkcs11f.h  pkcs11t.h  sm2.c  sm3.c  sm3.h  sm4ofb.c  sm4ofb.h
app/src/main/res/layout/: access_item.xml  activity_base.xml  activity_cj.xml  activity_launcher.xml  activity_main.xml  activity_performance.xml  activity_result.xml  activity_skf_list.xml  activity_test_count.xml  activity_test_csm.xml  alg.xml  byte_data.xml  certificate.xml  change_pin.xml  container.xml  create_app.xml  create_file.xml  delete_file.xml  ecc_export_sess.xml  ecc_sign.xml  ecc_verify.xml  enc_dec.xml  enc_dec_once.xml  export_puk.xml  ext_ecc_encrypt.xml  ext_ecc_sign.xml  gen_random.xml  get_file.xml  get_pin_info.xml  gridview_func.xml  gridview_type.xml  import_ecc.xml  import_sess.xml  layout_skf.xml  read_file.xml  set_dev_label.xml  unblock_pin.xml  verify_pin.xml  write_file.xml
app/src/main/res/menu/: menu_choose.xml  menu_choose_scrolling.xml
app/src/main/res/values/: colors.xml  strings.xml  styles.xml
app/src/main/skfjni/: certificateTest.cpp  certificateTest.h  com_westone_testdemo_skfTestNative.h  devAndAppTest.cpp  devAndAppTest.h  generaldefine.h  pinVerificationTest.cpp  pinVerificationTest.h  skf.h  skftest.cpp
app/src/test/java/com/westone/csmmanager/: ExampleUnitTest.java
cardmanager/: CMakeLists.txt  build.gradle
cardmanager/src/main/: AndroidManifest.xml
cardmanager/src/main/java/com/westone/: SimStatusBc.java
cardmanager/src/main/java/com/westone/cardmanager/: CSMManager.java  (+6 more)
cardmanager/src/main/jni/: MainTest.cpp  SkfMainTest.cpp  TFCardManager.cpp  com_westone_cardmanager_Card.h  com_westone_skf_SkfNativeFunc.h  skfjni.cpp  testCipher.cpp  testPIN.cpp  testUtilities.cpp
cardmanager/src/main/res/values/: strings.xml
csm/: CMakeLists.txt  build.gradle  export.map  proguard-rules.pro  seeds_txt  unused.txt
csm/src/main/: AndroidManifest.xml
csm/src/main/jni/: Export.h  logdefine.h
csm/src/main/jni/Communication/: BinderClient.cpp  BinderClient.h  BinderServer.cpp  BinderServer.h  BroadCastPack.h  CommunicationClient.h  CommunicationServer.h  LocalSocketClient.cpp  LocalSocketClient.h  LocalSocketServer.cpp  LocalSocketServer.h  build.gradle
csm/src/main/jni/P11/: AttributesConvert.cpp  AttributesConvert.h  CSMNativeService.cpp  LibLoadManager.cpp  LibLoadManager.h  P11Adapter.cpp  P11Adapter.h  P11AdapterFunction.h  P11Mapping.cpp  P11Mapping.h  Utils_c.cpp  Utils_c.h  hd_transmitdelay.cpp  hd_transmitdelay.h  log.cpp  log.h  logserver.cpp  logserver.h  p11FunctionParse.cpp  p11FunctionParse.h  p11definef.h  p11definet.h  p11func_hd.cpp  p11func_hd.h  p11func_jw.cpp  p11func_jw.h  p11func_sc.cpp  p11func_sc.h  pkcs11.h  pkcs11.pb.cc  pkcs11.pb.h  pkcs11_extendf.h  pkcs11_extendt.h  pkcs11f.cpp  ucm.h  ucm_error.h
csm/src/main/jni/RemoteCall/: CSMResAccess.cpp  CSMResAccess.h  CondAddr.h  ContentFrame.h  ContentFrame0001.cpp  ContentFrame0001.h  ContentFrame0002.cpp  ContentFrame0002.h  Control.cpp  Control.h  FunctionParse.cpp  FunctionParse.h  GetPackageName.cpp  GetPackageName.h  MsgFrame.cpp  MsgFrame.h  Mutex.cpp  Mutex.h  Pack.cpp  Pack.h  RemoteCall.cpp  RemoteCall.h  RemoteService.cpp  RemoteService.h  RemoteServicePack.cpp  RemoteServicePack.h  Return.pb.cc  Return.pb.h  Return.proto  ReturnCode.h  config.h
csm/src/main/jni/SKF/: SkfAdapter.cpp  SkfAdapter.h  buildproto.bat  native-lib.cpp  skf.h  skf.pb.cc  skf.pb.h  skf.proto  skf.proto~  skfClient.cpp  skfFunctionParse.cpp  skfFunctionParse.h  skfLibLoader.cpp  skfLibLoader.h  skf_f.h  skf_info_cache.h  skf_interface.cpp  skf_soft.cpp  skf_soft_util.cpp  skf_soft_util.h  skf_t.h  skfdef.cpp  skfdef.h
csm/src/main/jni/plog/: Log.h  Record.h  RecordLog.cpp  RecordLog.h  Util.h
csm/src/main/jni/plog/Appenders/: RollingFileAppender.h
csm/src/main/jni/plog/Formatters/: CsvFormatter.h  TxtFormatter.h
csm/src/main/jni/protoc-3.7.0-linux-x86_32/: Return.proto  pkcs11.proto  skf.proto
csm/src/main/jni/rpcclient/: interface.cpp
csm/src/main/jni/rpcserver/: inf.cpp  inf.h
csm/src/main/jni/scp02/: Scp02Client.cpp  Scp02Client.h  Scp02Service.cpp  Scp02Service.h  tiny_des.c  tiny_sha2.c  types.h
csm/src/main/jni/sm/include/: assist.h  ec.h  ec_bn.h  ec_fix_pt.h  ec_general.h  ec_lcl.h  eccsm2_p256.h  ecdsa.h  eces.h  ecp_smpl.h  eea3.h  eia3.h  kdf.h  key_ex.h  mm_basic_fun.h  mm_config.h  mm_macro.h  mm_memory.h  mm_sm_cfg.h  mm_types.h  rc4.h  sm2.h  sm2_bn.h  sm2_bn_lcl.h  sm2_type.h  sm3.h  sm3_core.h  sm3_locl.h  sm4.h  sm4_core.h  test_basic_func.h  test_ecdsa.h  test_ecdsa_speed.h  test_eces.h  test_key_ex.h  test_vector_wst.h  timers.h  zuc.h  zuc_core.h
csm/src/main/res/layout/: activity_request_permission.xml
csm/src/main/res/values/: strings.xml  styles.xml
(+163 files in other folders)
